# myopic-attention-allocation-mutual-information

./: .gitignore  LICENSE  README.md  myopic_mi.py  pyproject.toml
src/myopic_mi/: __init__.py  costs.py  dynamics.py  experiment.py  main.py  plotting.py  solver.py
tests/: test_experiment.py  test_solver.py
